--- a/es.html
+++ b/es.html
@@ -117,8 +117,9 @@
     <h2 id="rsvp">
       ¡Haz clic en la imagen para confirmar tu asistencia!
     </h2>
-    <!-- <a href="https://forms.gle/ja8QeovRYR6avGKv8" target="_blank"><img id="real" src="images/FINALIC.jpg" alt=""></a> -->
-    <a href="https://forms.gle/Gbx5uT1vEayccsUQA" target="_blank"><img id="mix" src="images/no.jpg"></a>
+    <a href="https://forms.gle/Gbx5uT1vEayccsUQA" target="_blank"><img id="real" src="images/no.jpg" alt=""></a>
+    <a href="https://forms.gle/hdBHqK1ru94o2Ymm9" target="_blank"><img id="mix" src="images/gbm3.jpg"></a>
+  </div>
   </div>
   <div id="membership_perks">
     <h1 id="membership">
