--- a/es.html
+++ b/es.html
@@ -117,7 +117,7 @@
     <h2 id="rsvp">
       ¡Haz clic en la imagen para confirmar tu asistencia!
     </h2>
-    <a href="https://forms.gle/hdBHqK1ru94o2Ymm9" target="_blank"><img id="real" src="images/gbm3.jpg" alt=""></a>
+    <!-- <a href="https://forms.gle/hdBHqK1ru94o2Ymm9" target="_blank"><img id="real" src="images/gbm3.jpg" alt=""></a> -->
     <a href="https://forms.gle/4PAkLrTzDDBMw4bu7" target="_blank"><img id="mix" src="images/harlan.jpg"></a>
   </div>
   </div>
