--- a/en.html
+++ b/en.html
@@ -114,8 +114,8 @@
         Click Image to RSVP!
       </h2>
     </h1>
-    <a href="https://forms.gle/KV6VFoapP8G77To2A" target="_blank"><img id="real" src="images/paris.jpg" alt=""></a>
-    <a href="https://forms.gle/nvh4qowXWxHQjb9u5" target="_blank"><img id="mix" src="images/FINALIC.jpg"></a>
+    <a href="https://forms.gle/cHLzsJ9P9MbWaN3fA" target="_blank"><img id="real" src="images/che.jpg" alt=""></a>
+    <a href="https://forms.gle/AToqzkRVfpi7fjQz5" target="_blank"><img id="mix" src="images/gbm4.jpg"></a>
   </div>
   <div id="membership_perks">
     <h1 id="membership">
