--- a/es.html
+++ b/es.html
@@ -117,8 +117,8 @@
     <h2 id="rsvp">
       ¡Haz clic en la imagen para confirmar tu asistencia!
     </h2>
-    <!-- <a href="https://forms.gle/hdBHqK1ru94o2Ymm9" target="_blank"><img id="real" src="images/gbm3.jpg" alt=""></a> -->
-    <a href="https://forms.gle/4PAkLrTzDDBMw4bu7" target="_blank"><img id="mix" src="images/harlan.jpg"></a>
+    <a href="https://forms.gle/KV6VFoapP8G77To2A" target="_blank"><img id="real" src="images/paris.jpg" alt=""></a>
+    <a href="https://forms.gle/nvh4qowXWxHQjb9u5" target="_blank"><img id="mix" src="images/FINALIC.jpg"></a>
   </div>
   </div>
   <div id="membership_perks">
