--- a/en.html
+++ b/en.html
@@ -111,10 +111,9 @@
     <h1 id="upcoming">
       UPCOMING EVENTS
       <h2 id="rsvp">
-        Click Image to RSVP!
+        Summer break is in session! We will be back soon!
       </h2>
     </h1>
-    <a href="https://forms.gle/AToqzkRVfpi7fjQz5" target="_blank"><img id="real" src="images/gbm4.jpg" alt=""></a>
   </div>
   <div id="membership_perks">
     <h1 id="membership">
