--- a/es.html
+++ b/es.html
@@ -115,9 +115,8 @@
       PRÓXIMOS EVENTOS
     </h1>
     <h2 id="rsvp">
-      ¡Haz clic en la imagen para confirmar tu asistencia!
+      ¡Las vacaciones de verano están en sesión! Volveremos pronto!
     </h2>
-    <a href="https://forms.gle/AToqzkRVfpi7fjQz5" target="_blank"><img id="real" src="images/gbm4.jpg" alt=""></a>
   </div>
   </div>
   <div id="membership_perks">
